--- a/04. RestOperator.html
+++ b/04. RestOperator.html
@@ -1,4 +1,4 @@
-function sum(num1, num2){
+<!-- function sum(num1, num2){
     console.log (num1+num2);
 }
 
@@ -12,5 +12,58 @@ Functions with multiple arguments
 
 function sum(){
     let sum = 0;
-    for (let i in arguments)
+    for (let i in arguments){
+        sum + = arguments[i];
+    }
+    console.log(sum);
 }
+
+sum("Shri Ram", 20, 30);
+sum("Shri Ram", 20, 30, 40, 50);
+
+fuction sum(name, ...args){
+    let sum = 0;
+    for (let in args){
+        sum +=args[i];
+    }
+    console.log(sum);
+    console.log(name);
+} -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rest Operators</title>
+</head>
+<body>
+    <!-- <script>
+        function sum() {
+            console.log(arguments);
+        }
+
+        sum(20,30,40);
+        sum(20,30);
+    </script> -->
+    <script>
+        function sum(...args) {
+            console.log(arguments);
+            document.write(`Hello ${name} of ${course} : `);
+
+            let sum = 0;
+            for(let i in args){
+                console.log(i);
+                sum += args[i];
+            }
+            // document.write(sum+"<br>");            
+        }
+        sum("Piyush","MBA");
+        sum("Shri Shyam","Btech");
+        // sum(20,30);
+        // sum(20,30,40);
+    </script>
+</body>
+</html>
