--- a/01.Let&Const&Variable.html
+++ b/01.Let&Const&Variable.html
@@ -1,8 +1,8 @@
-<!-- var (ES5)                        Let  (ES6)                       Const (ES6)
+var (ES5)                        Let  (ES6)                       Const (ES6)
 
 var x ="Hello";         let x ="Hello";                 const x ="Hello";
 var x = "World";        let x = "World";(incorrect)     const x = "World";(incorrect);
-x = "Wow";              x="Wow"                         x="Wow";(incorrect)
+x = "Wow";              x="Wow";                         x="Wow";(incorrect)
 
 
 Global Scope            Block Scope                     Block Scope
@@ -11,7 +11,7 @@ if(condition){              incorrect                   incorrect
     var x="Hello"
 }
 
-document.write(x) -->
+document.write(x)
 
 
 <!DOCTYPE html>
