--- a/06. ObjectLiterals.html
+++ b/06. ObjectLiterals.html
@@ -1,4 +1,4 @@
-let name = "Piyush"
+<!-- let name = "Piyush"
 
 let obj = {
     name : name
@@ -7,3 +7,32 @@ let obj = {
 let obj = {
     name
 };
+ -->
+
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Object literals</title>
+ </head>
+ <body>
+     <!-- <script>
+         let n = "student";
+         course = "Btech";
+
+         var obj = {
+             [n + "name"]:"Mohan Sharma",
+             course:"B.tech",
+             detail(){
+                 return `${this.studentname} is student of ${this.course}`
+             }
+         };
+    
+         console.log(obj);
+         console.log(obj['detail']());
+
+    </script> -->
+ </body>
+ </html>
